# EA-Modeleur

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json  settings.local.json.example
.claude/agents/: canonical-modeler.md  corpus-ingester.md  ea-serializer.md  evidence-retriever.md  import-validator.md  metamodel-analyst.md  metamodel-guardian.md  pipeline-debugger.md  xmi-serializer.md
.claude/playbooks/: compile-metamodel.md  generate-canonical-model.md  ingest-kaderdocs.md  run-import-validation.md  serialize-ea.md  validate-canonical.md
.claude/rules/: coding-standards.md  data-governance.md  ea-xmi-conventions.md
.claude/skills/: compile-metamodel.md  validate-canonical.md
.claude/skills/compile-metamodel/: SKILL.md
.claude/skills/generate-canonical-model/: SKILL.md
.claude/skills/ingest-kaderdocs/: SKILL.md
.claude/skills/run-import-validation/: SKILL.md
.claude/skills/serialize-ea/: SKILL.md
.claude/skills/validate-canonical/: SKILL.md
data/fixtures/: canonical_minimal.json  sample_corpus.txt  sample_metamodel.xmi
data/fixtures/metamodel/: description.txt  description_explicit.txt  incomplete.xmi  malformed.xmi  mini_valid.xmi
docs/architecture/: canonical-model.md  ingest.md  metamodel-compiler.md  overview.md
docs/decisions/: ADR-001-sprint1a-cleanup.md  README.md
docs/prompts/: README.md
metamodels/: README.md
schemas/: canonical_model.schema.json
scripts/: README.md  compile_metamodel.py  run_ingest.py
src/ea_mbse_pipeline/: __init__.py  cli.py  settings.py
src/ea_mbse_pipeline/canonical/: __init__.py  builders.py  diagram_models.py  evidence_models.py  ids.py  io.py  models.py  protocols.py  uncertainty_models.py
src/ea_mbse_pipeline/ea_test/: __init__.py  models.py  protocols.py
src/ea_mbse_pipeline/ingest/: __init__.py  chunking.py  file_discovery.py  image_manifest.py  metadata.py  models.py  (+5 more)
src/ea_pipeline/: __init__.py  cli.py  pipeline.py  settings.py
tests/: conftest.py
tests/golden/: test_golden.py
tests/integration/: test_canonical_roundtrip.py  test_ingest_pipeline.py  test_metamodel_pipeline.py  test_pipeline.py
tests/regression/: test_regression.py
tests/unit/: test_canonical_ids.py  test_canonical_io.py  test_canonical_models.py  test_description_parser.py  test_file_discovery.py  test_ingest_chunking.py  test_ingest_metadata.py  test_ingest_models.py  test_ingestion_models.py  test_metamodel_compiler.py  test_metamodel_models.py  test_provenance.py  test_registry_export.py  test_rule_registry.py  test_shared_errors.py  test_validation_models.py  test_xmi_parser.py
(+43 files in other folders)
